[package]
name = "xl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    ".",
    # Craft A Language
    "cal01",
    # Tyr Chen
    "r1",
    "httpie",
    "thumbor",
    "queryer",
    "queryer-py",
]
