[package]
name = "httpie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta"
colored = "2.0"
jsonxf = "1.1"
mime = "0.3"
syntect = "4.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.11", features = ["full"] }
lazy_static = "1.4"
