[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
tracing = "0.1"
http = "0.2"    # 我们使用 HTTP status code 所以引入这个类型库
thiserror = "1"
dashmap = "4.0" # 并发 HashMap
bytes = "1.1"

[dev-dependencies]
anyhow = "1.0"
tracing-subscriber = "0.2"
futures = "0.3" # 提供 Stream trait
futures-util = "0.3"
async-prost = { path = "../async-prost" }
tokio = { version = "1.12", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] }

[build-dependencies]
prost-build = "0.9"
