[package]
name = "kvs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"   # 高效处理网络 buffer 的库
prost = "0.9"   # 处理 protobuf 的代码
tracing = "0.1" # 日志处理

[dev-dependencies]
anyhow = "1.0"                                    # 错误处理
async-prost = { path = "../async-prost" }         # 支持把 protobuf 封装成 TCP frame
futures = "0.3"                                   # 提供 Stream trait
tokio = { version = "1.11", features = ["full"] } # 异步网络库
tracing-subscriber = "0.2"                        # 日志处理

[build-dependencies]
prost-build = "0.9" # 编译 protobuf
