[package]
name = "queryer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dialect"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
sqlparser = "0.10"
polars = { version = "0.16", features = ["json", "lazy"] } # DataFrame
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1.11", features = ["fs"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1.11", features = ["full"] }
