[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4" #web服务器
anyhow = "1.0"
base64 = "0.13"
bytes = "1.1"
image = "0.23" #处理图片
lazy_static = "1.4"
lru = "0.7"
percent-encoding = "2.1"
photon-rs = "0.3" #图片效果
prost = "0.9"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] } #序列化/反序列化数据
tokio = { version = "1.11", features = ["full"] }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] } #服务处理中间件
tower-http = { version = "0.2", features = [
    "add-extension",
    "compression-full",
    "trace",
] } #http中间件
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.9"
